--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/*variables*/
+:root {
+    --main-color-1: rgb(51, 55, 69);
+    --main-color-2: #DAFFEF ;
+    --secunday-color:#8499B1;
+    --cta-color: #E6AF2E; 
+}
 html, body {
     font-size: 18px;
 }
@@ -10,7 +17,8 @@ html, body {
 }
 
 body {
-    background-color: #5F9EA0;
+    background-color: var(--secunday-color);
+    height: 100%;
     
 }
 
@@ -19,27 +27,52 @@ h1,h2,h3,h4,h5,h6 {
 
 }
 
-
 .header {
-    color: rgb(184, 122, 41);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 9%, rgba(0,212,255,1) 87%); 
+    color: var(--main-color-2);
+    background: var(--main-color-1);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    height: 50px;
+
+
     
 }
+.logo {
+    height: auto;
+    width: 150px;
+    display: block;
+    z-index: 2;
+}
 
-.header h1, header h3 {
-text-shadow: 0px 2px 2px rgb(49, 49, 49) ;  
-padding: 10px;
-border-bottom: 0.25rem solid rgba(9,9,121,0.3);
+.header h1, .header h2, .header h3 {
+text-shadow: 0px 2px 2px rgb(49, 49, 49);
+text-transform: uppercase;
+font-size: 1.5rem;
+}
 
+.header h2 {
+    white-space: nowrap;
+}
+
+header h3{
+    padding-bottom: 20px;
+    font-weight: lighter;
+    color: var(--secunday-color);
+    z-index: 99;
+    position: relative;
+    display: none;
+    font-size: 2rem;
 }
 
 .container {
     position: relative;
 }
 .base {
-    background-color: cadetblue;
+    background-color:var(--secunday-color);
     margin-top: 3rem;
 }
 
@@ -86,7 +119,8 @@ border-bottom: 0.25rem solid rgba(9,9,121,0.3);
 }
 
 .polaroid img {
-    border: solid hsla(182, 25%, 50%, 0.8);
+    border: 2px solid var(--cta-color);
+    border-bottom: none;
     display: block;
     height: auto;
     width:  200px;
@@ -96,12 +130,15 @@ border-bottom: 0.25rem solid rgba(9,9,121,0.3);
 }
 .polaroid p {
     align-items: center;
-    background-color: hsla(182, 25%, 50%, 0.8);
+    background-color: var(--main-color-1);
     display: flex;
     justify-content: center;
     width: 200px;
     height: 20%;
     text-align: center;
+    color: var(--cta-color);
+    border: 2px solid var(--cta-color);
+    border-top: none;
 
 }
 
@@ -130,18 +167,36 @@ border-bottom: 0.25rem solid rgba(9,9,121,0.3);
 }
 
 .footer {
-    background-color: rgb(59, 94, 95);
-    text-align: center;
-    height: 4rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: var(--main-color-2);
     color: rgb(22, 22, 22);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    transform: skewy(5deg);
+    margin-top: 3rem;
+    height: 200px;
+
 }
 
+.footer > * {
+    transform: skewY(-5deg);
+}
 .footer span {
     text-transform: uppercase;
     color: rgb(117, 27, 27);
+}
+
+.footer img {
+    display: block;
+    position: absolute;
+    top: -2rem;
+}
+
+.footer p {
+    text-transform: uppercase;
+    font-size: 16px;
+    text-align: center;
 }
 
 /* animacion */
