--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,10 +233,14 @@ header h3{
         width: 29%;
 
     }
-
+    .logo {
+        width: 10rem;
+        height: auto;
+    }
     .polaroid img {
         height: auto;
         width: 50%;
+
      }
 
     .polaroid p {
