--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ h1,h2,h3,h4,h5,h6 {
     align-items: flex-start;
     justify-content: space-around;
     height: 50px;
+    width: 100%;
 
 
     
@@ -51,7 +52,7 @@ h1,h2,h3,h4,h5,h6 {
 .header h1, .header h2, .header h3 {
 text-shadow: 0px 2px 2px rgb(49, 49, 49);
 text-transform: uppercase;
-font-size: 1.5rem;
+font-size: 1.25rem;
 }
 
 .header h2 {
@@ -232,6 +233,10 @@ header h3{
         margin: 2%;
         width: 29%;
 
+    }
+
+    .header h1, .header h2 {
+        font-size: 1.75rem;
     }
     .logo {
         width: 10rem;
